Added background, cleaned up code

--- a/index.html
+++ b/index.html
@@ -18,14 +18,29 @@
       }
       .tree {
         margin-bottom: 10px;
-        overflow: auto;
-      }
+    }
+    #tree{
+        width: 5000px;
+    }
+    html,body {
+    background: url(bear-bruin-water-f-wallpaper-1.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover; /* For WebKit*/
+    -moz-background-size: cover;    /* Mozilla*/
+    -o-background-size: cover;      /* Opera*/
+    background-size: cover;         /* Generic*/
+}
+
+.stretch {
+    width:100%;
+    height:100%;
+}
   </style>
     </head>
 
     <body>
         <div id="tree">
         </div>
+
 
 
               <script src="http://code.jquery.com/jquery-2.2.1.js"></script>
